src/objects/PSA_Project_Balance__c.object
<CustomObject>
    <description>Current billing rule-related project balances.  Records created as a part of data migration may include an initial balance.</description>
    <fields>
        <fullName>PSA_Balance_Type__c</fullName>
        <description>Categorizes project balances, so billing rule true-ups can accurately reflect migrated billing balances</description>
        <inlineHelpText>Categorizes project balances, so billing rule true-ups can accurately reflect migrated billing balances</inlineHelpText>
        <label>Balance Type</label>
        <picklist>
            <picklistValues>
                <fullName>T&amp;M Services Total</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T&amp;M Services for Billing Level</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Services Credits Applied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expense Total Billing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expense Credits Applied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Holdback Applied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Holdback Release Applied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discount Applied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discount Services Total</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PSA_Billing_Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Event</label>
        <referenceTo>pse__Billing_Event__c</referenceTo>
        <relationshipLabel>PSA Project Balances</relationshipLabel>
        <relationshipName>PSA_Project_Balances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PSA_Billing_Level__c</fullName>
        <description>Populated if the balance is associated with a billing rule that has a multi-select billing level picklist</description>
        <inlineHelpText>Populated if the balance is associated with a billing rule that has a multi-select billing level picklist</inlineHelpText>
        <label>Billing Level</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSA_Current_Balance__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The current summary amount or balance based on current and past billings.
This value may be recalculated upon every billing event generation in order to catch up with current billings.</description>
        <inlineHelpText>The current summary amount or balance based on current and past billings.
This value may be recalculated upon every billing event generation in order to catch up with current billings.</inlineHelpText>
        <label>Current Balance</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PSA_Project__c</fullName>
        <label>Project</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipLabel>PSA Project Balances</relationshipLabel>
        <relationshipName>PSA_Project_Balances</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>PSA Project Balance</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>PSA_Project__c</columns>
        <columns>PSA_Billing_Event__c</columns>
        <columns>PSA_Balance_Type__c</columns>
        <columns>PSA_Current_Balance__c</columns>
        <columns>PSA_Billing_Level__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Discount_Services_Total</fullName>
        <columns>NAME</columns>
        <columns>PSA_Project__c</columns>
        <columns>PSA_Billing_Event__c</columns>
        <columns>PSA_Balance_Type__c</columns>
        <columns>PSA_Current_Balance__c</columns>
        <columns>PSA_Billing_Level__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PSA_Balance_Type__c</field>
            <operation>equals</operation>
            <value>Discount Services Total</value>
        </filters>
        <label>Discount Services Total</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Specific_Project</fullName>
        <columns>NAME</columns>
        <columns>PSA_Project__c</columns>
        <columns>PSA_Billing_Event__c</columns>
        <columns>PSA_Balance_Type__c</columns>
        <columns>PSA_Current_Balance__c</columns>
        <columns>PSA_Billing_Level__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PSA_Project__c</field>
            <operation>contains</operation>
            <value>Nationwide</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>lessOrEqual</operation>
            <value>9/1/2015 12:00 AM</value>
        </filters>
        <label>Specific Project</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PB-{0000}</displayFormat>
        <label>Project Balance Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PSA Project Balances</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>